.metadata/.plugins/org.eclipse.cdt.ui/GPIO_MIO_intr.build.log
16:08:29 **** Auto Build of configuration Debug for project GPIO_MIO_intr ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../GPIO_MIO_intr_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from ../../GPIO_MIO_intr_bsp/ps7_cortexa9_0/include/xgpiops.h:119:0,
                 from ../src/main.c:12:
../src/main.c: In function 'SetupInterruptSystem':
../../GPIO_MIO_intr_bsp/ps7_cortexa9_0/include/xstatus.h:61:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/main.c:75:11: note: in expansion of macro 'XST_FAILURE'
    return XST_FAILURE;
           ^~~~~~~~~~~
../src/main.c:67:6: note: declared here
 void SetupInterruptSystem(XScuGic *GicInstancePtr, XGpioPs *Gpio,u16 GpioIntrId)
      ^~~~~~~~~~~~~~~~~~~~
../src/main.c:91:3: error: 'Status' undeclared (first use in this function); did you mean 'XStatus'?
   Status = XScuGic_Connect(GicInstancePtr, GpioIntrId,
   ^~~~~~
   XStatus
../src/main.c:91:3: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c:95:11: warning: 'return' with a value, in function returning void
    return Status;
           ^~~~~~
../src/main.c:67:6: note: declared here
 void SetupInterruptSystem(XScuGic *GicInstancePtr, XGpioPs *Gpio,u16 GpioIntrId)
      ^~~~~~~~~~~~~~~~~~~~
../src/main.c:99:29: error: 'GPIO_BANK' undeclared (first use in this function); did you mean 'XGPIOPS_BANK1'?
   XGpioPs_SetIntrType(Gpio, GPIO_BANK, 0x00, 0xFFFFFFFF, 0x00);
                             ^~~~~~~~~
                             XGPIOPS_BANK1
../src/main.c:102:50: error: 'IntrHandler' undeclared (first use in this function); did you mean 'XNullHandler'?
   XGpioPs_SetCallbackHandler(Gpio, (void *)Gpio, IntrHandler);
                                                  ^~~~~~~~~~~
                                                  XNullHandler
../src/main.c:106:45: error: 'Input_Pin' undeclared (first use in this function)
   XGpioPs_IntrEnable(Gpio, GPIO_BANK, (1 << Input_Pin));
                                             ^~~~~~~~~
../src/main.c: At top level:
../src/main.c:118:1: warning: return type defaults to 'int' [-Wimplicit-int]
 SetupInterruptSystem(XScuGic *GicInstancePtr, XGpioPs *Gpio,
 ^~~~~~~~~~~~~~~~~~~~
../src/main.c:118:1: error: conflicting types for 'SetupInterruptSystem'
../src/main.c:67:6: note: previous definition of 'SetupInterruptSystem' was here
 void SetupInterruptSystem(XScuGic *GicInstancePtr, XGpioPs *Gpio,u16 GpioIntrId)
      ^~~~~~~~~~~~~~~~~~~~
../src/main.c: In function 'SetupInterruptSystem':
../src/main.c:123:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../src/main.c:131:1: error: expected '{' at end of input
 }
 ^
../src/main.c:131:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/subdir.mk:23: src/main.o] Error 1

16:08:30 Build Finished (took 1s.175ms)

